Implemented trading systems monitor view, settings and link to live data feeds
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1634 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.core.ats/plugin.xml
+++ b/org.eclipsetrader.core.ats/plugin.xml
@@ -2,11 +2,12 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         point="org.eclipsetrader.core.elementFactories">
-      <factory
-            class="org.eclipsetrader.core.internal.ats.RepositoryElementFactory"
-            id="org.eclipsetrader.core.ats.factory">
-      </factory>
+         point="org.eclipsetrader.core.launchers">
+      <launcher
+            class="org.eclipsetrader.core.internal.ats.TradingSystemsLauncher"
+            id="org.eclipsetrader.core.ats.launcher"
+            name="Automated Trading Systems">
+      </launcher>
    </extension>
 
 </plugin>
