Implemented history data editor
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1649 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.properties
+++ b/org.eclipsetrader.ui/plugin.properties
@@ -89,3 +89,5 @@ charts.preferencepage.name = Charts
 line.propertypage.name = Tool
 importdata.wizard.name = Historical Data
 importdata.wizard.description = Import / Update historical prices data.
+opendata.command.description = Open a history data editor for the selected object.
+opendata.command.name = Edit History
