Updated ATS perspective settings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1655 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -174,7 +174,7 @@
             class="org.eclipsetrader.ui.internal.ats.monitor.TradingSystemsViewPart"
             icon="icons/eview16/server.png"
             id="org.eclipsetrader.ui.views.ats.monitor"
-            name="Trading Systems Monitor"
+            name="Trading Systems"
             restorable="true">
       </view>
       <view
