--- a/org.eclipsetrader.core/plugin.xml
+++ b/org.eclipsetrader.core/plugin.xml
@@ -9,6 +9,7 @@
    <extension-point id="org.eclipsetrader.core.trading.systems" name="Trading Systems" schema="schema/systems.exsd"/>
    <extension-point id="org.eclipsetrader.core.trading.alerts" name="Alerts" schema="schema/alerts.exsd"/>
    <extension-point id="org.eclipsetrader.core.trading.brokers" name="Brokers" schema="schema/brokers.exsd"/>
+   <extension-point id="org.eclipsetrader.core.ats.javascript" name="JavaScript Extensions" schema="schema/javascript.exsd"/>
    <extension
          point="org.eclipsetrader.core.launchers">
       <launcher
