Added JavaScript function implementations for TALib indicators
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1658 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.charts.indicators/plugin.xml
+++ b/org.eclipsetrader.ui.charts.indicators/plugin.xml
@@ -800,5 +800,143 @@
             name="Tasuki Gap">
       </indicator>
    </extension>
+   <extension
+         point="org.eclipsetrader.core.ats.javascript">
+      <function
+            class="org.eclipsetrader.core.ats.javascript.AD">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.ADOSC">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.ADX">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.ADXR">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.APO">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.AROOND">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.AROONU">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.ATR">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.AVGPRICE">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.BBL">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.BBU">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.BOP">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.CCI">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.CMO">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.DEMA">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.DX">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.EMA">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.KAMA">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.LINEARREG">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.MACD">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.MACDH">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.MACDS">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.MAMA">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.MFI">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.MOM">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.NATR">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.OBV">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.PPO">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.ROC">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.RSI">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.SAR">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.SMA">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.STOCH">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.STOCHRSI">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.SUM">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.T3">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.TEMA">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.TRANGE">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.TRIMA">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.TRIX">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.TSF">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.TYPPRICE">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.ULTOSC">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.VAR">
+      </function>
+      <function
+            class="org.eclipsetrader.core.ats.javascript.WMA">
+      </function>
+   </extension>
 
 </plugin>
