Refactored watchlist view implementation to allow future enhancements
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1662 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -1494,6 +1494,16 @@
                type="org.eclipsetrader.core.ats.ITradingSystem">
          </adapter>
       </factory>
+      <factory
+            adaptableType="org.eclipsetrader.ui.internal.views.WatchListViewItem"
+            class="org.eclipsetrader.ui.internal.views.WatchListViewItemAdapterFactory">
+         <adapter
+               type="org.eclipsetrader.core.instruments.Security">
+         </adapter>
+         <adapter
+               type="org.eclipsetrader.core.instruments.ISecurity">
+         </adapter>
+      </factory>
    </extension>
    <extension
          point="org.eclipsetrader.ui.indicators">
