Added preference pages to choose between secure and clear-text password storage
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1663 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.directaworld/plugin.xml
+++ b/org.eclipsetrader.directaworld/plugin.xml
@@ -22,5 +22,14 @@
             name="Code">
       </property>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="org.eclipsetrader.ui.preferences.plugins"
+            class="org.eclipsetrader.directaworld.internal.ui.preferences.GeneralPreferencePage"
+            id="org.eclipsetrader.directaworld.authentication"
+            name="DirectaWorld">
+      </page>
+   </extension>
 
 </plugin>
