Added secure storage defaults
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1672 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.platform/plugin_customization.ini
+++ b/org.eclipsetrader.platform/plugin_customization.ini
@@ -44,6 +44,12 @@ org.eclipsetrader.ui/INITIAL_BACKFILL_YEARS=10
 # ui defaults
 org.eclipsetrader.ui/RUN_ALL_LAUNCHERS=true
 
+# Directa
+org.eclipsetrader.directa/USE_SECURE_PREFERENCE_STORE=true
+
+# DirectaWorld
+org.eclipsetrader.directaworld/USE_SECURE_PREFERENCE_STORE=true
+
 # Yahoo! Finance
 org.eclipsetrader.yahoo/DRIVER=org.eclipsetrader.yahoo.internal.core.connector.StreamingConnector
 org.eclipsetrader.yahoo/NEWS_UPDATE_INTERVAL=15
