Implemented user defined chart periods
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1678 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -57,6 +57,12 @@
             id="org.eclipsetrader.ui.preferences.watchlist"
             name="WatchLists">
       </page>
+      <page
+            category="org.eclipsetrader.ui.charts.general"
+            class="org.eclipsetrader.ui.internal.charts.ChartPeriodsPreferencePage"
+            id="org.eclipsetrader.ui.charts.periods"
+            name="Periods">
+      </page>
    </extension>
    <extension
          point="org.eclipse.ui.views">
