Implemented user defined bar sizes to import from backfill data providers
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1679 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -63,6 +63,11 @@
             id="org.eclipsetrader.ui.charts.periods"
             name="Periods">
       </page>
+      <page
+            class="org.eclipsetrader.ui.internal.preferences.BarsPreferencePage"
+            id="org.eclipsetrader.ui.charts.bars"
+            name="Import">
+      </page>
    </extension>
    <extension
          point="org.eclipse.ui.views">
